@@ -6,8 +6,6 @@ dependencies {
 
 tasks.withType<JavaExec> {
     jvmArgs(listOf(
-            "--enable-preview",
-            "--enable-native-access=ALL-UNNAMED",
-            "-ea"
+            "--enable-native-access=ALL-UNNAMED"
     ))
 }
